# chat-hub

./: .env  .gitignore  Cargo.toml  Dockerfile  config.toml  settings.toml
.github/workflows/: deploy-k8s.yml
docs/deploy/deployment/: chat-hub-service.yaml
docs/deploy/service/: chat-hub-service.yaml
scripts/diesel/: diesel-ai-model.sh  diesel-ai-schema.sh  diesel-ai.toml
src/: main.rs  swagger_docs.rs
src/common/: database.rs
src/common/error/: chat_error.rs  mod.rs
src/controller/: mod.rs
src/controller/chat/: azure_controller.rs  mod.rs
src/controller/conversation/: conversation_controller.rs  conversation_item_controller.rs  mod.rs
src/controller/monitor/: health_controller.rs
src/model/: mod.rs
src/model/diesel/ai/: ai_models.rs  ai_schema.rs  custom_ai_models.rs  mod.rs
src/model/req/chat/: ask_req.rs  mod.rs
src/model/req/conversation/: conversation_add.rs  conversation_item_add.rs  conversation_item_req.rs  conversation_req.rs  mod.rs
src/service/chat/: azure_chat_service.rs  mod.rs
src/service/conversation/: conversation_item_service.rs  conversation_service.rs  mod.rs
