[package]
name = "chat-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.64", features = ["derive"] }
serde_json = "1.0.64"
actix-web = "4"
actix-web-validator = "5.0.1"
rust_wheel = { git = "https://github.com/RedDwarfTech/rust_wheel.git", features = [
    "model",
    "common",
    "rwconfig",
    "texhub",
    "alipay",
] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = [
    "actix-web",
    "debug-embed",
] }
utoipa-rapidoc = { version = "3.0.0", features = ["actix-web"] }
log4rs = "1.2.0"
log = "0.4.0"
validator = { version = "0.16.1", features = ["derive"] }
async-openai = { version = "0.23.1" }
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "stream"] }